Fix overlap between topic count and footer controls.
Add reply label in mobile view.

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -7,3 +7,12 @@
   color: #464646;
   font-size: 0.8em;
 }
+
+#topic-footer-buttons .combobox,
+#topic-footer-buttons .btn {
+  margin-top: 50px;
+}
+
+.topic-post nav.post-controls button.reply:after {
+  content: "Reply";
+}
